model trainer uploaded

--- a/notebook/Model_Training.ipynb
+++ b/notebook/Model_Training.ipynb
@@ -43,7 +43,7 @@
         }
       ],
       "source": [
-        "!pip install catboost"
+        "%pip install catboost"
       ]
     },
     {
@@ -69,7 +69,7 @@
         }
       ],
       "source": [
-        "!pip install xgboost"
+        "%pip install xgboost"
       ]
     },
     {
